[gd_scene load_steps=7 format=3 uid="uid://cnoqnsx5o24gr"]

[ext_resource type="Script" path="res://maps/scripts/intro.gd" id="1_ilun8"]
[ext_resource type="PackedScene" uid="uid://rfn4w2xakosd" path="res://scenes/enemies/dragon/friendly_dragon.tscn" id="1_t0sla"]
[ext_resource type="PackedScene" uid="uid://bsg0351mx3b4u" path="res://addons/MetroidvaniaSystem/Nodes/RoomInstance.tscn" id="1_w2kdt"]
[ext_resource type="TileSet" uid="uid://5qspssasjso2" path="res://resources/forest_tileset.tres" id="2_70twq"]
[ext_resource type="PackedScene" uid="uid://bagbnemmeixs2" path="res://scenes/objects/ability_scale.tscn" id="5_hn6ml"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8hbsy"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Map" type="Node2D"]
script = ExtResource("1_ilun8")
drums_file = ""

[node name="FriendlyDragon" parent="." instance=ExtResource("1_t0sla")]
position = Vector2(428, 386)

[node name="GoldenDragon" parent="." instance=ExtResource("1_t0sla")]
visible = false
modulate = Color(1, 1, 1, 1)
position = Vector2(1152, 384)

[node name="RoomInstance" parent="." instance=ExtResource("1_w2kdt")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_70twq")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(917507, 131072, 1, 851971, 131072, 4, 786435, 131072, 3, 917506, 131072, 4, 851970, 131072, 4, 786434, 131072, 1, 720898, 196608, 4, 655362, 196608, 4, 589826, 196608, 4, 524290, 196608, 4, 458754, 196608, 4, 393218, 196608, 4, 327682, 196608, 4, 262146, 196608, 4, 196610, 196608, 1, 131074, 196608, 1, 65538, 196608, 1, 2, 196608, 4, 917505, 131072, 1, 851969, 131072, 1, 786433, 131072, 1, 720897, 131072, 4, 655361, 131072, 4, 589825, 131072, 1, 524289, 131072, 1, 458753, 131072, 4, 393217, 131072, 1, 327681, 131072, 1, 262145, 131072, 4, 196609, 131072, 4, 131073, 131072, 1, 65537, 131072, 1, 1, 131072, 4, 917504, 65536, 1, 851968, 65536, 4, 786432, 65536, 1, 720896, 65536, 4, 655360, 65536, 1, 589824, 65536, 4, 524288, 65536, 4, 458752, 65536, 4, 393216, 65536, 4, 327680, 65536, 1, 262144, 65536, 4, 196608, 65536, 4, 131072, 65536, 4, 65536, 65536, 4, 0, 65536, 4, 917530, 131072, 4, 851994, 131072, 4, 786458, 131072, 3, 917529, 131072, 1, 851993, 131072, 1, 786457, 131072, 0, 917528, 131072, 4, 851992, 131072, 4, 786456, 131072, 3, 917527, 131072, 1, 851991, 131072, 4, 786455, 131072, 3, 917526, 131072, 4, 851990, 131072, 1, 786454, 131072, 0, 917525, 131072, 1, 851989, 131072, 4, 786453, 131072, 3, 917524, 131072, 4, 851988, 131072, 4, 786452, 131072, 3, 917523, 131072, 4, 851987, 131072, 4, 786451, 131072, 0, 917522, 131072, 1, 851986, 131072, 4, 786450, 131072, 0, 917521, 131072, 4, 851985, 131072, 4, 786449, 131072, 3, 917520, 131072, 4, 851984, 131072, 4, 786448, 131072, 3, 917519, 131072, 4, 851983, 131072, 4, 786447, 131072, 0, 917518, 131072, 4, 851982, 131072, 4, 786446, 131072, 3, 917517, 131072, 1, 851981, 131072, 4, 786445, 131072, 3, 917516, 131072, 1, 851980, 131072, 4, 786444, 131072, 3, 917515, 131072, 1, 851979, 131072, 4, 786443, 131072, 3, 917514, 131072, 4, 851978, 131072, 4, 786442, 131072, 3, 917513, 131072, 1, 851977, 131072, 1, 786441, 131072, 0, 917512, 131072, 4, 851976, 131072, 1, 786440, 131072, 3, 917511, 131072, 4, 851975, 131072, 4, 786439, 131072, 0, 917510, 131072, 4, 851974, 131072, 4, 786438, 131072, 3, 917509, 131072, 1, 851973, 131072, 1, 786437, 131072, 0, 917508, 131072, 1, 851972, 131072, 1, 786436, 131072, 0, 917537, 196608, 3, 917536, 131072, 4, 852000, 196608, 3, 917535, 131072, 4, 851999, 131072, 4, 786463, 196608, 3, 917534, 131072, 1, 851998, 131072, 1, 786462, 131072, 3, 917533, 131072, 4, 851997, 131072, 4, 786461, 131072, 3, 917532, 131072, 4, 851996, 131072, 4, 786460, 131072, 3, 917531, 131072, 1, 851995, 131072, 4, 786459, 131072, 3, 917557, 196608, 1, 852021, 196608, 4, 786485, 196608, 4, 917556, 131072, 4, 852020, 131072, 4, 786484, 131072, 4, 917555, 131072, 4, 852019, 131072, 4, 786483, 131072, 1, 917554, 131072, 1, 852018, 131072, 1, 786482, 131072, 3, 917553, 65536, 1, 852017, 65536, 4, 786481, 65536, 3, 131125, 196608, 4, 65589, 196608, 1, 53, 196608, 4, 131124, 65536, 4, 65588, 65536, 4, 52, 65536, 1, 720949, 196608, 1, 655413, 196608, 1, 589877, 196608, 4, 524341, 196608, 4, 458805, 196608, 4, 393269, 196608, 4, 327733, 196608, 4, 262197, 196608, 4, 196661, 196608, 4, 720948, 131072, 1, 655412, 65536, 4, 589876, 131072, 4, 524340, 131072, 4, 458804, 131072, 1, 393268, 131072, 1, 327732, 131072, 4, 262196, 131072, 1, 196660, 65536, 4, 1114165, 196608, 5, 1048629, 196608, 1, 983093, 196608, 4, 1114164, 131072, 5, 1048628, 131072, 1, 983092, 131072, 4, 1114163, 131072, 5, 1048627, 131072, 4, 983091, 131072, 4, 1114162, 131072, 2, 1048626, 131072, 4, 983090, 131072, 4, 1114161, 65536, 5, 1048625, 65536, 1, 983089, 65536, 1, 1048609, 196608, 5, 983073, 196608, 4, 1048608, 131072, 5, 983072, 131072, 4, 1048607, 131072, 5, 983071, 131072, 1, 1048606, 131072, 5, 983070, 131072, 4, 1048605, 131072, 2, 983069, 131072, 1, 1048604, 131072, 5, 983068, 131072, 4, 1048603, 131072, 5, 983067, 131072, 1, 1048602, 131072, 2, 983066, 131072, 4, 1048601, 131072, 5, 983065, 131072, 4, 1048600, 131072, 5, 983064, 131072, 1, 1048599, 131072, 5, 983063, 131072, 1, 1048598, 131072, 5, 983062, 131072, 1, 1048597, 131072, 5, 983061, 131072, 4, 1048596, 131072, 5, 983060, 131072, 4, 1048595, 131072, 5, 983059, 131072, 1, 1048594, 131072, 5, 983058, 131072, 4, 1048593, 131072, 5, 983057, 131072, 1, 1048592, 131072, 2, 983056, 131072, 4, 1048591, 131072, 2, 983055, 131072, 4, 1048590, 131072, 5, 983054, 131072, 4, 1048589, 131072, 5, 983053, 131072, 4, 1048588, 131072, 5, 983052, 131072, 4, 1048587, 131072, 5, 983051, 131072, 4, 1048586, 131072, 5, 983050, 131072, 4, 1048585, 131072, 5, 983049, 131072, 4, 1048584, 131072, 2, 983048, 131072, 4, 1048583, 131072, 2, 983047, 131072, 4, 1048582, 131072, 2, 983046, 131072, 1, 1048581, 131072, 5, 983045, 131072, 4, 1048580, 131072, 2, 983044, 131072, 4, 1048579, 131072, 2, 983043, 131072, 4, 1048578, 131072, 2, 983042, 131072, 1, 1048577, 131072, 5, 983041, 131072, 4, 1048576, 65536, 5, 983040, 65536, 4, -65483, 196608, 4, -131019, 196608, 3, -65484, 131072, 4, -131020, 131072, 3, -65485, 131072, 2, -131021, 131072, 3, -65486, 131072, 5, -131022, 131072, 3, -65487, 131072, 2, -131023, 131072, 3, -65488, 131072, 2, -131024, 131072, 3, -65489, 131072, 2, -131025, 131072, 0, -65490, 131072, 2, -131026, 131072, 3, -65491, 131072, 2, -131027, 131072, 3, -65492, 131072, 5, -131028, 131072, 0, -65493, 131072, 2, -131029, 131072, 0, -65494, 131072, 2, -131030, 131072, 3, -65495, 131072, 5, -131031, 131072, 3, -65496, 131072, 5, -131032, 131072, 0, -65497, 131072, 2, -131033, 131072, 3, -65498, 131072, 5, -131034, 131072, 3, -65499, 131072, 5, -131035, 131072, 0, -65500, 131072, 5, -131036, 131072, 3, -65501, 131072, 2, -131037, 131072, 0, -65502, 131072, 5, -131038, 131072, 3, -65503, 131072, 5, -131039, 131072, 0, -65504, 131072, 2, -131040, 131072, 0, -65505, 131072, 5, -131041, 131072, 3, -65506, 131072, 2, -131042, 131072, 3, -65507, 131072, 5, -131043, 131072, 0, -65508, 131072, 2, -131044, 131072, 3, -65509, 131072, 2, -131045, 131072, 3, -65510, 131072, 5, -131046, 131072, 3, -65511, 131072, 5, -131047, 131072, 3, -65512, 131072, 5, -131048, 131072, 3, -65513, 131072, 5, -131049, 131072, 3, -65514, 131072, 5, -131050, 131072, 0, -65515, 131072, 2, -131051, 131072, 3, -65516, 131072, 5, -131052, 131072, 3, -65517, 131072, 5, -131053, 131072, 3, -65518, 131072, 5, -131054, 131072, 3, -65519, 131072, 2, -131055, 131072, 0, -65520, 131072, 5, -131056, 131072, 3, -65521, 131072, 2, -131057, 131072, 3, -65522, 131072, 5, -131058, 131072, 3, -65523, 131072, 5, -131059, 131072, 3, -65524, 131072, 5, -131060, 131072, 3, -65525, 131072, 5, -131061, 131072, 3, -65526, 131072, 5, -131062, 131072, 0, -65527, 131072, 5, -131063, 131072, 0, -65528, 131072, 2, -131064, 131072, 0, -65529, 131072, 5, -131065, 131072, 0, -65530, 131072, 5, -131066, 131072, 3, -65531, 131072, 2, -131067, 131072, 3, -65532, 131072, 5, -131068, 131072, 0, -65533, 131072, 5, -131069, 131072, 3, -65534, 131072, 1, -131070, 131072, 3, -65535, 131072, 4, -131071, 131072, 3, -65536, 65536, 4, -131072, 65536, 3, 720947, 65536, 0)
layer_1/name = "Vines"
layer_1/z_index = -2
layer_1/tile_data = PackedInt32Array(786442, 458752, 2, 720906, 458752, 1, 655370, 458752, 1, 589834, 458752, 1, 524298, 458752, 1, 458762, 458752, 1, 393226, 458752, 1, 327690, 458752, 1, 262154, 393216, 1, 196618, 393216, 1, 131082, 393216, 1, 65546, 393216, 0, 786441, 393216, 2, 720905, 393216, 1, 655369, 393216, 1, 589833, 393216, 1, 524297, 393216, 1, 458761, 393216, 1, 393225, 393216, 1, 327689, 393216, 1, 262153, 393216, 1, 196617, 393216, 1, 131081, 393216, 1, 65545, 393216, 0, 786440, 393216, 2, 720904, 393216, 1, 655368, 393216, 1, 589832, 327680, 1, 524296, 393216, 1, 458760, 393216, 1, 393224, 393216, 1, 327688, 393216, 1, 262152, 393216, 1, 196616, 393216, 1, 131080, 393216, 1, 65544, 393216, 0, 786439, 393216, 2, 720903, 393216, 1, 655367, 393216, 0, 524295, 393216, 2, 458759, 393216, 1, 393223, 393216, 1, 327687, 327680, 1, 262151, 393216, 1, 196615, 393216, 1, 131079, 393216, 1, 65543, 393216, 0, 786438, 393216, 2, 720902, 393216, 1, 655366, 393216, 1, 589830, 458752, 1, 524294, 393216, 1, 458758, 393216, 1, 393222, 393216, 0, 262150, 393216, 2, 196614, 393216, 1, 131078, 393216, 1, 65542, 393216, 0, 786437, 393216, 2, 720901, 393216, 1, 655365, 393216, 1, 589829, 393216, 1, 524293, 393216, 1, 458757, 393216, 1, 393221, 393216, 1, 327685, 458752, 1, 262149, 393216, 1, 196613, 393216, 1, 131077, 393216, 1, 65541, 393216, 0, 786436, 393216, 2, 720900, 393216, 1, 655364, 393216, 1, 589828, 393216, 1, 524292, 393216, 1, 458756, 393216, 1, 393220, 393216, 1, 327684, 393216, 1, 262148, 393216, 1, 196612, 393216, 1, 131076, 393216, 1, 65540, 393216, 0, 786435, 393216, 2, 720899, 393216, 1, 655363, 393216, 1, 589827, 393216, 1, 524291, 393216, 1, 458755, 393216, 1, 393219, 393216, 1, 327683, 393216, 1, 262147, 393216, 1, 196611, 393216, 1, 131075, 393216, 1, 65539, 393216, 0, 786434, 327680, 2, 720898, 327680, 1, 655362, 327680, 1, 589826, 327680, 1, 524290, 327680, 1, 458754, 327680, 1, 393218, 327680, 1, 327682, 327680, 1, 262146, 327680, 1, 196610, 327680, 1, 131074, 327680, 1, 65538, 327680, 0, 262163, 458752, 2, 196627, 458752, 1, 131091, 458752, 1, 65555, 458752, 0, 262162, 393216, 2, 196626, 393216, 1, 131090, 393216, 1, 65554, 393216, 0, 262161, 393216, 2, 196625, 393216, 1, 131089, 393216, 1, 65553, 393216, 0, 262160, 393216, 1, 196624, 393216, 1, 131088, 393216, 1, 65552, 393216, 0, 262159, 393216, 2, 196623, 393216, 1, 131087, 393216, 1, 65551, 393216, 0, 262158, 393216, 2, 196622, 393216, 1, 131086, 393216, 1, 65550, 393216, 0, 262157, 393216, 1, 196621, 393216, 1, 131085, 393216, 1, 65549, 393216, 0, 262156, 393216, 1, 196620, 393216, 1, 131084, 393216, 1, 65548, 393216, 0, 262155, 393216, 2, 196619, 393216, 1, 131083, 393216, 1, 65547, 393216, 0, 393268, 458752, 1, 327732, 458752, 1, 262196, 458752, 1, 196660, 458752, 1, 131124, 458752, 1, 393267, 393216, 1, 327731, 393216, 1, 262195, 393216, 1, 196659, 393216, 1, 131123, 393216, 1, 393266, 393216, 1, 327730, 393216, 1, 262194, 393216, 1, 196658, 393216, 1, 131122, 393216, 1, 393265, 393216, 2, 327729, 393216, 1, 262193, 327680, 1, 196657, 393216, 1, 131121, 393216, 1, 393264, 393216, 1, 327728, 393216, 0, 196656, 393216, 2, 131120, 393216, 1, 393263, 327680, 2, 327727, 393216, 1, 262191, 458752, 1, 196655, 393216, 1, 131119, 393216, 1, 262190, 393216, 1, 196654, 393216, 1, 131118, 393216, 1, 262189, 393216, 1, 196653, 393216, 1, 131117, 393216, 1, 262188, 393216, 1, 196652, 393216, 1, 131116, 393216, 1, 262187, 393216, 1, 196651, 393216, 1, 131115, 393216, 1, 262186, 393216, 1, 196650, 393216, 1, 131114, 393216, 1, 262185, 327680, 1, 196649, 393216, 1, 131113, 393216, 1, 327726, 393216, 2, 327725, 393216, 2, 327724, 393216, 2, 327723, 393216, 2, 327722, 393216, 2, 327721, 327680, 2, 196648, 393216, 2, 196647, 393216, 2, 196646, 327680, 2, 131110, 327680, 0, 131111, 393216, 0, 131112, 393216, 1, 458802, 327680, 2, 458803, 393216, 1, 458804, 458752, 1, 524340, 458752, 2, 524339, 327680, 2, 327693, 458752, 1, 393229, 524288, 1, 327692, 327680, 2, 458765, 524288, 1, 524301, 524288, 1, 589837, 524288, 1, 655373, 524288, 2, 327696, 524288, 1, 393232, 327680, 1, 458768, 524288, 2, 393233, 393216, 3, 393234, 458752, 0, 458770, 524288, 1, 524306, 524288, 2, 65588, 458752, 1, 52, 458752, 1, -65484, 458752, 0, 65587, 393216, 1, 51, 393216, 1, -65485, 393216, 0, 65586, 393216, 1, 50, 393216, 1, -65486, 393216, 0, 65585, 393216, 1, 49, 393216, 1, -65487, 393216, 0, 65584, 393216, 1, 48, 393216, 1, -65488, 393216, 0, 65583, 393216, 1, 47, 393216, 1, -65489, 393216, 0, 65582, 393216, 1, 46, 393216, 1, -65490, 393216, 0, 65581, 393216, 1, 45, 393216, 1, -65491, 393216, 0, 65580, 393216, 1, 44, 393216, 1, -65492, 393216, 0, 65579, 393216, 1, 43, 393216, 1, -65493, 393216, 0, 65578, 393216, 1, 42, 393216, 1, -65494, 393216, 0, 65577, 393216, 1, 41, 393216, 1, -65495, 393216, 0, 65576, 327680, 1, 40, 327680, 1, -65496, 327680, 0, 458795, 524288, 2, 393259, 524288, 1, 327719, 524288, 2, 262183, 524288, 1, 655408, 524288, 2, 589872, 524288, 1, 524336, 524288, 1, 458800, 524288, 1)
layer_2/name = "BackgroundTrunks"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(65588, 786434, 6, 52, 589826, 4, 65587, 589826, 5, 51, 655362, 4, 65586, 589826, 5, 50, 655362, 4, 65585, 589826, 5, 49, 655362, 4, 65584, 589826, 5, 48, 655362, 4, 65583, 589826, 5, 47, 655362, 4, 65582, 589826, 5, 46, 655362, 4, 65581, 589826, 5, 45, 655362, 4, 65580, 589826, 5, 44, 655362, 4, 65579, 589826, 5, 43, 655362, 4, 65578, 589826, 5, 42, 655362, 4, 65577, 589826, 5, 41, 655362, 4, 65576, 589826, 5, 40, 655362, 4, 65575, 589826, 5, 39, 655362, 4, 65574, 589826, 5, 38, 655362, 4, 65573, 589826, 5, 37, 655362, 4, 65572, 589826, 5, 36, 655362, 4, 65571, 589826, 5, 35, 655362, 4, 65570, 589826, 5, 34, 655362, 4, 65569, 655362, 4, 33, 655362, 4, 65568, 655362, 4, 32, 655362, 4, 65567, 655362, 4, 31, 655362, 4, 65566, 589826, 5, 30, 655362, 4, 65565, 589826, 5, 29, 655362, 4, 65564, 589826, 5, 28, 655362, 4, 65563, 589826, 5, 27, 655362, 4, 65562, 589826, 5, 26, 655362, 4, 65561, 589826, 5, 25, 655362, 4, 65560, 589826, 5, 24, 655362, 4, 65559, 589826, 5, 23, 655362, 4, 65558, 589826, 5, 22, 655362, 4, 65557, 589826, 5, 21, 655362, 4, 65556, 589826, 5, 20, 655362, 4, 65555, 589826, 5, 19, 655362, 4, 65554, 589826, 5, 18, 655362, 4, 65553, 589826, 5, 17, 655362, 4, 65552, 589826, 5, 16, 655362, 4, 65551, 589826, 5, 15, 655362, 4, 65550, 589826, 5, 14, 655362, 4, 65549, 589826, 5, 13, 655362, 4, 65548, 589826, 5, 12, 655362, 4, 65547, 589826, 5, 11, 655362, 4, 65546, 589826, 5, 10, 655362, 4, 65545, 589826, 5, 9, 655362, 4, 65544, 589826, 5, 8, 655362, 4, 65543, 589826, 5, 7, 655362, 4, 65542, 589826, 5, 6, 655362, 4, 65541, 589826, 5, 5, 655362, 4, 65540, 589826, 5, 4, 655362, 4, 65539, 589826, 5, 3, 655362, 4, 65538, 589826, 5, 2, 655362, 4, 65537, 720898, 6, 1, 524290, 5, -65484, 786434, 5, -65485, 524290, 4, -65486, 524290, 4, -65487, 524290, 4, -65488, 524290, 4, -65489, 524290, 4, -65490, 524290, 4, -65491, 524290, 4, -65492, 524290, 4, -65493, 524290, 4, -65494, 524290, 4, -65495, 524290, 4, -65496, 524290, 4, -65497, 524290, 4, -65498, 524290, 4, -65499, 524290, 4, -65500, 524290, 4, -65501, 524290, 4, -65502, 524290, 4, -65503, 524290, 4, -65504, 524290, 4, -65505, 524290, 4, -65506, 524290, 4, -65507, 524290, 4, -65508, 524290, 4, -65509, 524290, 4, -65510, 524290, 4, -65511, 524290, 4, -65512, 524290, 4, -65513, 524290, 4, -65514, 524290, 4, -65515, 524290, 4, -65516, 524290, 4, -65517, 524290, 4, -65518, 524290, 4, -65519, 524290, 4, -65520, 524290, 4, -65521, 524290, 4, -65522, 524290, 4, -65523, 524290, 4, -65524, 524290, 4, -65525, 524290, 4, -65526, 524290, 4, -65527, 524290, 4, -65528, 524290, 4, -65529, 524290, 4, -65530, 524290, 4, -65531, 524290, 4, -65532, 524290, 4, -65533, 524290, 4, -65534, 524290, 4, -65535, 720898, 5, 983073, 786434, 6, 917537, 589826, 4, 852001, 589826, 4, 786465, 589826, 4, 720929, 589826, 4, 655393, 589826, 4, 589857, 589826, 4, 524321, 589826, 4, 458785, 589826, 4, 393249, 589826, 4, 327713, 589826, 4, 262177, 589826, 4, 196641, 589826, 4, 131105, 589826, 4, 983072, 589826, 5, 917536, 655362, 4, 852000, 655362, 4, 786464, 655362, 4, 720928, 655362, 4, 655392, 655362, 4, 589856, 655362, 4, 524320, 655362, 4, 458784, 655362, 4, 393248, 655362, 4, 327712, 655362, 4, 262176, 655362, 4, 196640, 655362, 4, 131104, 655362, 4, 983071, 720898, 6, 917535, 524290, 5, 851999, 524290, 5, 786463, 524290, 5, 720927, 524290, 5, 655391, 524290, 5, 589855, 524290, 5, 524319, 524290, 5, 458783, 524290, 5, 393247, 524290, 5, 327711, 524290, 5, 262175, 524290, 5, 196639, 524290, 5, 131103, 524290, 5)
layer_3/name = "ForegroundTrunks"
layer_3/tile_data = PackedInt32Array(1048609, 786432, 6, 983073, 589824, 4, 917537, 589824, 4, 852001, 589824, 4, 786465, 589824, 4, 720929, 589824, 4, 655393, 589824, 4, 589857, 786432, 5, 1048608, 589824, 5, 983072, 655360, 4, 917536, 655360, 4, 852000, 655360, 4, 786464, 655360, 4, 720928, 655360, 4, 655392, 655360, 4, 589856, 524288, 4, 1048607, 720896, 6, 983071, 524288, 5, 917535, 524288, 5, 851999, 524288, 5, 786463, 524288, 5, 720927, 524288, 5, 655391, 524288, 5, 589855, 720896, 5, 1048601, 786432, 6, 983065, 589824, 4, 917529, 589824, 4, 851993, 589824, 4, 786457, 589824, 4, 720921, 589824, 4, 655385, 589824, 4, 589849, 786432, 5, 1048600, 589824, 5, 983064, 655360, 4, 917528, 655360, 4, 851992, 655360, 4, 786456, 655360, 4, 720920, 655360, 4, 655384, 655360, 4, 589848, 524288, 4, 1048599, 720896, 6, 983063, 524288, 5, 917527, 524288, 5, 851991, 524288, 5, 786455, 524288, 5, 720919, 524288, 5, 655383, 524288, 5, 589847, 720896, 5, 655380, 589824, 3, 655381, 589824, 1, 655382, 589824, 1, 655386, 589824, 2)

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(708, 362)

[node name="AbilityScaleGlide" parent="." instance=ExtResource("5_hn6ml")]
position = Vector2(384, 344)
monitoring = false
ability = 4

[node name="AbilityScaleAttack" parent="." instance=ExtResource("5_hn6ml")]
position = Vector2(456, 344)
monitoring = false
ability = 0

[node name="Lizard" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8hbsy")
animation = &"walk"
